# engine

./: CMakeLists.txt  README.md
include/engine/: application.hpp  concepts.hpp  entity_component_system.hpp  entry_point.hpp  gltf_loader.hpp  material.hpp  materials.hpp  meta_utils.hpp  rc.hpp  renderer.hpp  resources_manager.hpp  scene.hpp
include/engine/application/: event.hpp  window.hpp
include/engine/entity_component_system/: component_implementations.hpp  component_interfaces.hpp
include/engine/internal/: rc_resource.hpp
include/engine/resources_manager/: rc.hpp  resource_concept.hpp  weak.hpp
include/engine/resources_manager/detail/: rc_resource.hpp  resource_id.hpp  typedefs.hpp
include/engine/scene/: application_channel.hpp  basic_scene.hpp  broad_phase_collision.hpp  node.hpp  renderer.hpp  scene.hpp  yaml_loader.hpp
include/engine/scene/node/: camera.hpp  collisions.hpp  gltf_loader.hpp  narrow_phase_collision.hpp  node_data_concept.hpp  node_payload.hpp  node_span.hpp  script.hpp  viewport.hpp
include/engine/scene/renderer/: mesh.hpp
include/engine/scene/renderer/mesh/: material.hpp
include/engine/scene/renderer/mesh/material/: materials.hpp  shader.hpp
include/engine/utils/: api_macro.hpp  bounds_check_access.hpp  constants.hpp  format_glm.hpp  format_vec.hpp  hash.hpp  interval_set.hpp  lin_algebra.hpp  meta.hpp  noalloc_vector.hpp  optional_ref.hpp  read_file.hpp  stack_vector.hpp  stride_span.hpp
include/engine/utils/detail/: meta.hpp  smallest_uint.hpp
include/engine/window/: window.hpp
src/: CMakeLists.txt  application.cpp  entity_component_system.cpp  entry_point.cpp  gltf_loader.cpp  material.cpp  materials.cpp  prova_shared.cpp  rc.cpp  renderer.cpp  resources_manager.cpp  scene.cpp
src/application/: CMakeLists.txt  window.cpp
src/internal/: rc_resource.cpp
src/resources_manager/: CMakeLists.txt  rc.cpp  template_defs.cpp  weak.cpp
src/resources_manager/detail/: rc_resource.cpp
src/scene/: CMakeLists.txt  application_channel.cpp  basic_scene.cpp  broad_phase_collision.cpp  node.cpp  renderer.cpp  scene.cpp  yaml_loader.cpp
src/scene/node/: CMakeLists.txt  camera.cpp  collisions.cpp  gltf_loader.cpp  narrow_phase_collision.cpp  script.cpp  viewport.cpp
src/scene/renderer/: CMakeLists.txt  mesh.cpp
src/scene/renderer/mesh/: CMakeLists.txt  material.cpp
src/scene/renderer/mesh/material/: CMakeLists.txt  materials.cpp  shader.cpp
src/utils/: CMakeLists.txt  hash.cpp  lin_algebra.cpp  read_file.cpp
src/window/: CMakeLists.txt  window.cpp
tests/: CMakeLists.txt  example.cpp  interval_set.cpp  rm.cpp
