add_library(engine__global INTERFACE)
target_include_directories(engine__global INTERFACE ../include/)
target_link_libraries(engine__global INTERFACE slogga)

add_subdirectory(application/)
add_subdirectory(scene/)
add_subdirectory(resources_manager/)

#application
add_library(engine__application STATIC application.cpp)
target_link_libraries(engine__application PUBLIC engine__global engine__scene engine__application_window engine__resources_manager)
target_link_libraries(engine__application PRIVATE imgui GAL)

#entry_point
add_library(engine__entry_point STATIC entry_point.cpp)
target_link_libraries(engine__entry_point PUBLIC engine__global engine__application_window engine__scene)
target_link_libraries(engine__entry_point PRIVATE engine__application lua)

#resources_manager
add_library(engine__resources_manager STATIC resources_manager.cpp)
target_link_libraries(engine__resources_manager PUBLIC engine__global glm GAL engine__scene_renderer_mesh_material_materials engine__scene_node_gltf_loader engine__resources_manager_rc engine__resources_manager_weak)
target_link_libraries(engine__resources_manager PRIVATE engine__resources_manager_rc_resource)

#scene
add_library(engine__scene STATIC scene.cpp)
target_link_libraries(engine__scene PUBLIC engine__global engine__scene_node engine__scene_bp_collision engine__scene_application_channel)
target_link_libraries(engine__scene PRIVATE engine__resources_manager imgui)

#engine
add_library(engine INTERFACE)
target_link_libraries(engine INTERFACE engine__application engine__entry_point engine__resources_manager engine__scene engine__global imgui GAL)
