add_subdirectory(node/)
add_subdirectory(renderer/)

#renderer
add_library(engine__scene_renderer STATIC renderer.cpp)
target_link_libraries(engine__scene_renderer PUBLIC GAL engine__global engine__scene_renderer_mesh engine__utils_linalgebra)
target_link_libraries(engine__scene_renderer PRIVATE GAL glm engine__resources_manager)

#node
add_library(engine__scene_node STATIC node.cpp)
target_link_libraries(engine__scene_node PUBLIC engine__global glm GAL engine__scene_node_node_data)
target_link_libraries(engine__scene_node PRIVATE engine__resources_manager engine__scene_renderer)

#bp_collision
add_library(engine__scene_bp_collision STATIC broad_phase_collision.cpp)
target_link_libraries(engine__scene_bp_collision PUBLIC engine__global glm GAL)
target_link_libraries(engine__scene_bp_collision PRIVATE engine__resources_manager engine__scene_node) # by linking with node we also link with the narrow-phase

#application_channel
add_library(engine__scene_application_channel STATIC application_channel.cpp)
target_link_libraries(engine__scene_application_channel PUBLIC engine__global glm engine__resources_manager)
